// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ICONNmr > generateFile 1`] = `
"USER nmrsu
HOLDER 101
NO_SUBMIT
NAME ABC
TITLE project: ABC\\nbatch: 4CADA006
EXPNO 10
SOLVENT urine
EXPERIMENT N PROF_URINE_NOESY
EXPNO 11
SOLVENT urine
EXPERIMENT N PROF_URINE_JRES

USER nmrsu
HOLDER 102
NO_SUBMIT
NAME ABC
TITLE project: ABC\\nbatch: 4Cham010
EXPNO 20
SOLVENT urine
EXPERIMENT N PROF_URINE_NOESY
EXPNO 21
SOLVENT urine
EXPERIMENT N PROF_URINE_JRES
"
`;

exports[`ICONNmr generateFile 1`] = `
"USER nmrsu
HOLDER 101
NO_SUBMIT
NAME ABC
TITLE project: ABC\\\\nbatch: 4CADA006
EXPNO 10
SOLVENT urine
EXPERIMENT N PROF_URINE_NOESY
EXPNO 11
SOLVENT urine
EXPERIMENT N PROF_URINE_JRES

USER nmrsu
HOLDER 102
NO_SUBMIT
NAME ABC
TITLE project: ABC\\\\nbatch: 4Cham010
EXPNO 20
SOLVENT urine
EXPERIMENT N PROF_URINE_NOESY
EXPNO 21
SOLVENT urine
EXPERIMENT N PROF_URINE_JRES
"
`;
